--- a/packages/career-hub/package.json
+++ b/packages/career-hub/package.json
@@ -25,15 +25,16 @@
     "storybook": "start-storybook -p 6007"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "prop-types": "^15.8.1",
-    "classnames": "^2.5.1"
+    "react-router-dom": "^7.10.1"
   },
   "peerDependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
+    "antd": "^5.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "@reduxjs/toolkit": "^1.9.3",
-    "react-redux": "^8.0.5",
-    "antd": "^5.0.0"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
