--- a/packages/career-hub/package.json
+++ b/packages/career-hub/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scalant/career-hub",
-  "version": "2.1.0-alpha.0",
+  "version": "2.2.0-alpha.0",
   "description": "Career Hub package for MIT",
   "license": "MIT",
   "main": "dist/career-hub.umd.js",
@@ -39,5 +39,6 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^4.3.9"
-  }
+  },
+  "gitHead": "ca8dc246341ac84551ffeaaf3fb0182c16a081ad"
 }
