--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "stylelint-scss": "^6.11.1",
     "vite": "^6.3.1",
     "webpack": "5",
-    "webpack-cli": "4"
+    "webpack-cli": "4",
+    "classnames": "^2.5.1"
   },
   "dependencies": {
     "antd": "^5.24.7"
