--- a/packages/career-hub/package.json
+++ b/packages/career-hub/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scalant/career-hub",
-  "version": "3.10.4",
+  "version": "3.11.0-alpha.0",
   "description": "Career Hub package for MIT",
   "license": "MIT",
   "main": "dist/career-hub.umd.js",
