--- a/packages/career-hub/package.json
+++ b/packages/career-hub/package.json
@@ -28,5 +28,8 @@
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^4.3.9"
   },
-  "gitHead": "859e969cf79a05a9e3a6cc20866af609f58473c5"
+  "gitHead": "859e969cf79a05a9e3a6cc20866af609f58473c5",
+  "dependencies": {
+    "react-pdf": "^10.2.0"
+  }
 }
