--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scalant/components",
-  "version": "5.1.2",
+  "version": "5.2.0-alpha.0",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
