--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scalant/components",
-  "version": "7.0.0",
+  "version": "5.1.4-alpha.0",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
